# VectorFlow

./: CMakeLists.txt  INSTALL.md  README.md  howto_gperftools.md
base/: CMakeLists.txt
base/inc/vectorFlow/: AlignedArray.h  PhysicalConstants.h  PrimaryGenerator.h  RngWrapper.h  Typedefs.h  VectorTypes.h  math_wrappers.h
cmake/: VectorFlowConfig.cmake.in
event/: CMakeLists.txt
event/inc/: CocktailGenerator.h  Event.h  Particle.h  PrimaryGenerator.h  Track.h  Typedefs.h  math_wrappers.h
event/src/: CocktailGenerator.cxx  Event.cxx  Particle.cxx  Track.cxx
event/test/: CMakeLists.txt  testCocktailGenerator.cpp  testCocktailGenerator.cxx  testTrackPropagation.cxx
examples/: CMakeLists.txt
examples/trackML/: CMakeLists.txt
examples/trackML/inc/: FieldManager.h  GeomData.h  HelixPropagator.h  SimpleStepper.h  TrackMLGeom.h
examples/trackML/src/: HelixPropagator.cxx  SimpleStepper.cxx  TrackMLGeom.cxx  Tracks_v.h
examples/trackML/test/: CMakeLists.txt  testFieldManager.cxx  testTrackMLgeometry.cxx
interface/: CMakeLists.txt
interface/inc/vectorFlow/: ComplexFlow.h  Flow.h  PipelineFlow.h  Work.h  vectorFlow
magneticfield/: CMakeLists.txt
magneticfield/inc/Geant/: CashKarp.h  Config.h  ConstBzFieldHelixStepper.h  ConstFieldHelixStepper.h  GUFieldPropagator.h  GULineSection.h  GUTCashKarpRKF45.h  GUVectorLineSection.h  MagFieldEquation.h  ScalarFieldTrack.h  ScalarIntegrationDriver.h  ScalarMagFieldEquation.h  ScalarUniformMagField.h  SimpleIntegrationDriver.h  StepChecker.h  TMagErrorStepper.h  UniformMagField.h  VScalarEquationOfMotion.h  VScalarHelicalStepper.h  VVectorField.h
magneticfield/simplifiedCMS/: CMakeLists.txt
magneticfield/simplifiedCMS/inc/Geant/: CMSmagField.h
magneticfield/src/: ScalarHelicalStepper.cxx  ScalarIntegrationDriver.cxx  StepChecker.cxx  UniformMagField.cxx
magneticfield/tests/: CMakeLists.txt  testConstVecFieldStepper.cxx  testFlexibleCashKarp.cxx  testScalarIntegrationDriver.cxx  testVectorIntegrationDriver.cxx
test/: CMakeLists.txt  testInterfaces.cxx  testTrackPropagationComplex.cxx  testTrackPropagationPipeLine.cxx  testTrackPropagationPipeline.cxx  testVectorTypesTrackPropagationPipeLine.cxx  timer.h
